Closed
Bug 613731
Opened 15 years ago
Closed 15 years ago
nsEventStates.h uses undefined NS_ERROR
Categories
(Core :: General, defect)
Core
General
Tracking
()
RESOLVED
FIXED
mozilla2.0b8
People
(Reporter: imphil, Assigned: imphil)
Details
Attachments
(1 file, 1 obsolete file)
|
1.02 KB,
patch
|
Details | Diff | Splinter Review |
When building xforms in debug mode I get
c++ -o nsXFormsRangeElement.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include /home/philipp/src/mozilla-central/config/gcc_hidden.h -DXPI_NAME=xforms -DOSTYPE=\"Linux2.6.34.7-0\" -DOSARCH=Linux -I/home/philipp/src/mozilla-central/extensions/xforms -I. -I../../dist/include -I../../dist/include/nsprpub -I/home/philipp/src/mozilla-central/obj-debug/dist/include/nspr -I/home/philipp/src/mozilla-central/obj-debug/dist/include/nss -fPIC -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wcast-align -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -pedantic -Wno-long-long -fno-strict-aliasing -fshort-wchar -pthread -pipe -DDEBUG -D_DEBUG -DTRACING -g -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/nsXFormsRangeElement.pp /home/philipp/src/mozilla-central/extensions/xforms/nsXFormsRangeElement.cpp
In file included from /home/philipp/src/mozilla-central/extensions/xforms/nsXFormsNodeState.h:44:0,
from /home/philipp/src/mozilla-central/extensions/xforms/nsXFormsNodeState.cpp:40:
../../dist/include/nsEventStates.h: In member function ‘bool nsEventStates::HasState(nsEventStates) const’:
../../dist/include/nsEventStates.h:142:69: error: ‘NS_ERROR’ was not declared in this scope
It looks like nsEventStates.h is missing a #include nsDebug.h, a patch is attached.
| Assignee | ||
Updated•15 years ago
|
Attachment #492059 -
Flags: review?(bzbarsky)
Updated•15 years ago
|
Assignee: nobody → mail
Status: NEW → ASSIGNED
OS: Linux → All
Hardware: x86_64 → All
Comment 1•15 years ago
|
||
Comment on attachment 492059 [details] [diff] [review]
patch v1
r=me
I guess you can cancel Boris' review and push with mine. That's just adding one include.
You can probably push that with a=bustage.
Attachment #492059 -
Flags: review+
| Assignee | ||
Updated•15 years ago
|
Attachment #492059 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 2•15 years ago
|
||
volkmar, thanks for the review. could you check that in for me, I don't have commit access to m-c? Patch for checkin is attached.
Attachment #492059 -
Attachment is obsolete: true
Comment 3•15 years ago
|
||
I will do that tomorrow or on Monday. Thank you for this fix :)
Keywords: checkin-needed
Comment 4•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
You need to log in
before you can comment on or make changes to this bug.
Description
•