Bug 613731 - nsEventStates.h uses undefined NS_ERROR; r=mounir.lamouri, a=bustage